{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 92,
  "lineage": "8ef39f5c-3825-df08-8d45-97b712ff2f43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f5cb21c05ad2cac",
            "arn": "arn:aws:ec2:us-east-1:502710547370:elastic-ip/eipalloc-03f5cb21c05ad2cac",
            "association_id": "eipassoc-060bb18ce0940c47d",
            "domain": "vpc",
            "id": "eipalloc-03f5cb21c05ad2cac",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0028eaed417d104d2",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-44-215-50-79.compute-1.amazonaws.com",
            "public_ip": "44.215.50.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "hostel-nat-eip",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-nat-eip",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:502710547370:instance/i-08151547edc7b35a6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08151547edc7b35a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "hostel-terraform-ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c69fadfda656782d",
            "private_dns": "ip-10-0-11-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045f1dedfc4e0734d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ef661b1e90ceb4",
            "tags": {
              "Env": "dev",
              "Name": "hostel-db-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "db"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-db-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c0ad69e5dfce9d5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:502710547370:instance/i-0a0c3538b9fb551fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0c3538b9fb551fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "hostel-terraform-ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008eb0598364d8dab",
            "private_dns": "ip-10-0-12-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-012f256b4fbea1d1e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd2c08051c2e5188",
            "tags": {
              "Env": "dev",
              "Name": "hostel-db-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "db"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-db-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c0ad69e5dfce9d5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:502710547370:instance/i-052ca657883990220",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052ca657883990220",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hostel-terraform-ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03af8e97a1796407c",
            "private_dns": "ip-10-0-1-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "public_dns": "ec2-44-215-122-177.compute-1.amazonaws.com",
            "public_ip": "44.215.122.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c71bdc3234b7a357",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a54e2cb4a9f8370a",
            "tags": {
              "Env": "dev",
              "Name": "hostel-web-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "web"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-web-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069935982d1b31fc3"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:502710547370:instance/i-0a38114ca50ff7254",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a38114ca50ff7254",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hostel-terraform-ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc38195ec43c1fe1",
            "private_dns": "ip-10-0-2-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.31",
            "public_dns": "ec2-98-93-164-235.compute-1.amazonaws.com",
            "public_ip": "98.93.164.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054378f6a322c780b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9932fba71b8d7c6",
            "tags": {
              "Env": "dev",
              "Name": "hostel-web-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "web"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-web-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069935982d1b31fc3"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:internet-gateway/igw-05ac8512b2aa0265d",
            "id": "igw-05ac8512b2aa0265d",
            "owner_id": "502710547370",
            "tags": {
              "Env": "dev",
              "Name": "hostel-igw",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-igw",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502710547370:loadbalancer/app/hostel-alb/0dc9b4d9a675d3a1",
            "arn_suffix": "app/hostel-alb/0dc9b4d9a675d3a1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hostel-alb-2074598473.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:502710547370:loadbalancer/app/hostel-alb/0dc9b4d9a675d3a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hostel-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d5e5a7156721022f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d8b352856d61b3c"
              },
              {
                "subnet_id": "subnet-0961e1028360042da"
              }
            ],
            "subnets": [
              "subnet-0a54e2cb4a9f8370a",
              "subnet-0e9932fba71b8d7c6"
            ],
            "tags": {
              "Env": "dev",
              "Name": "hostel-alb",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-alb",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "vpc_id": "vpc-070ff523fa1c7d815",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502710547370:targetgroup/hostel-web-tg/108175cae54e2785",
            "arn_suffix": "targetgroup/hostel-web-tg/108175cae54e2785",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:502710547370:targetgroup/hostel-web-tg/108175cae54e2785",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:502710547370:loadbalancer/app/hostel-alb/0dc9b4d9a675d3a1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hostel-web-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "hostel-web-tg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-web-tg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070ff523fa1c7d815"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f5cb21c05ad2cac",
            "association_id": "eipassoc-060bb18ce0940c47d",
            "connectivity_type": "public",
            "id": "nat-06224cd135d1eda08",
            "network_interface_id": "eni-0028eaed417d104d2",
            "private_ip": "10.0.1.141",
            "public_ip": "44.215.50.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a54e2cb4a9f8370a",
            "tags": {
              "Env": "dev",
              "Name": "hostel-nat",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-nat",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-045e0a66b1aed84c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06224cd135d1eda08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045e0a66b1aed84c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ac8512b2aa0265d",
            "id": "r-rtb-06aa9ba2049ad0fb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06aa9ba2049ad0fb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:route-table/rtb-045e0a66b1aed84c4",
            "id": "rtb-045e0a66b1aed84c4",
            "owner_id": "502710547370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06224cd135d1eda08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "hostel-rt-private",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-rt-private",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:route-table/rtb-06aa9ba2049ad0fb7",
            "id": "rtb-06aa9ba2049ad0fb7",
            "owner_id": "502710547370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ac8512b2aa0265d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "hostel-rt-public",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-rt-public",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320363dff1214f59",
            "route_table_id": "rtb-045e0a66b1aed84c4",
            "subnet_id": "subnet-014ef661b1e90ceb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0157f3b6ecbae7ca9",
            "route_table_id": "rtb-045e0a66b1aed84c4",
            "subnet_id": "subnet-0fd2c08051c2e5188"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1cc9ceb2e9f5ef",
            "route_table_id": "rtb-06aa9ba2049ad0fb7",
            "subnet_id": "subnet-0a54e2cb4a9f8370a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce7b60b14b5e98d",
            "route_table_id": "rtb-06aa9ba2049ad0fb7",
            "subnet_id": "subnet-0e9932fba71b8d7c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:security-group/sg-0d5e5a7156721022f",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5e5a7156721022f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hostel-alb-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "hostel-alb-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-alb-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:security-group/sg-02c0ad69e5dfce9d5",
            "description": "DB servers SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c0ad69e5dfce9d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "54.226.111.100/32"
                ],
                "description": "SSH from admin (optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH via bastion (web SG)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069935982d1b31fc3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Web to DB :3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069935982d1b31fc3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hostel-db-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "hostel-db-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-db-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:security-group/sg-069935982d1b31fc3",
            "description": "Web servers SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069935982d1b31fc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "54.226.111.100/32"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALB to Web :5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5e5a7156721022f"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "hostel-web-sg",
            "name_prefix": "",
            "owner_id": "502710547370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "hostel-web-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-web-sg",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:subnet/subnet-014ef661b1e90ceb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014ef661b1e90ceb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "hostel-private-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-private-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:subnet/subnet-0fd2c08051c2e5188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2c08051c2e5188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "hostel-private-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-private-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "private"
            },
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:subnet/subnet-0a54e2cb4a9f8370a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a54e2cb4a9f8370a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "hostel-public-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-public-0",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:subnet/subnet-0e9932fba71b8d7c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9932fba71b8d7c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502710547370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "hostel-public-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-public-1",
              "Owner": "Rohit",
              "Project": "hostel-2tier",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a41dc8b4e4f9def6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502710547370:vpc/vpc-0a41dc8b4e4f9def6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0183aaebde6beb956",
            "default_route_table_id": "rtb-0cf45e738ded8a8e3",
            "default_security_group_id": "sg-0f64a65d7fa4220db",
            "dhcp_options_id": "dopt-01ba84328d7999763",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a41dc8b4e4f9def6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf45e738ded8a8e3",
            "owner_id": "502710547370",
            "tags": {
              "Env": "dev",
              "Name": "hostel-vpc",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "hostel-vpc",
              "Owner": "Rohit",
              "Project": "hostel-2tier"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}